src/tests/data/SemanticErrors/RedefinitionVar.c

#include <stdio.h>

int main()
{
    int a;
    int a;  // ERROR
	return 0;
}